<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/event_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/event_name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/location_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/location_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_type"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/eventactivitytype"
            ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max Number of Attendants"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/attendants_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="0"
        android:inputType="number"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/information_editText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/information_hint"/>

</LinearLayout>